// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Switch Basic 1`] = `
<div
  data-css-yto836=""
>
  <label
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-19bj9q0=""
      >
        <div
          data-css-1o90whm=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex={-1}
      type="checkbox"
    />
  </label>
</div>
`;

exports[`Storyshots Components/Switch Checked 1`] = `
<div
  data-css-yto836=""
>
  <label
    aria-checked={true}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-3p558u=""
      >
        <div
          data-css-1a0fvsw=""
        />
      </div>
    </div>
    <input
      checked={true}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex={-1}
      type="checkbox"
    />
  </label>
</div>
`;

exports[`Storyshots Components/Switch Checked Error 1`] = `
<div
  data-css-yto836=""
>
  <label
    aria-checked={true}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-mmyfiy=""
    >
      <div
        data-css-3p558u=""
      >
        <div
          data-css-1a0fvsw=""
        />
      </div>
    </div>
    <input
      checked={true}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex={-1}
      type="checkbox"
    />
  </label>
</div>
`;

exports[`Storyshots Components/Switch Colors 1`] = `
<div
  data-css-yto836=""
>
  <div
    data-css-1gfhbu8=""
  >
    <label
      aria-checked={true}
      data-css-nq9iqf=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="checkbox"
      tabIndex={0}
    >
      <div
        data-css-1lu7sfl=""
      >
        <div
          data-css-3p558u=""
        >
          <div
            data-css-1a0fvsw=""
          />
        </div>
      </div>
      <input
        checked={true}
        data-css-6wu9td=""
        readOnly={true}
        tabIndex={-1}
        type="checkbox"
      />
    </label>
    <label
      aria-checked={true}
      data-css-nq9iqf=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="checkbox"
      tabIndex={0}
    >
      <div
        data-css-1lu7sfl=""
      >
        <div
          data-css-1ad2n5h=""
        >
          <div
            data-css-1a0fvsw=""
          />
        </div>
      </div>
      <input
        checked={true}
        data-css-6wu9td=""
        readOnly={true}
        tabIndex={-1}
        type="checkbox"
      />
    </label>
    <label
      aria-checked={true}
      data-css-nq9iqf=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="checkbox"
      tabIndex={0}
    >
      <div
        data-css-1lu7sfl=""
      >
        <div
          data-css-3p558u=""
        >
          <div
            data-css-1a0fvsw=""
          />
        </div>
      </div>
      <input
        checked={true}
        data-css-6wu9td=""
        readOnly={true}
        tabIndex={-1}
        type="checkbox"
      />
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/Switch Disabled 1`] = `
<div
  data-css-yto836=""
>
  <label
    aria-checked={false}
    data-css-wytdm9=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex={-1}
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-19bj9q0=""
      >
        <div
          data-css-1o90whm=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex={-1}
      type="checkbox"
    />
  </label>
</div>
`;

exports[`Storyshots Components/Switch Disabled Error 1`] = `
<div
  data-css-yto836=""
>
  <label
    aria-checked={false}
    data-css-wytdm9=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex={-1}
  >
    <div
      data-css-mmyfiy=""
    >
      <div
        data-css-19bj9q0=""
      >
        <div
          data-css-1o90whm=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex={-1}
      type="checkbox"
    />
  </label>
</div>
`;

exports[`Storyshots Components/Switch Error 1`] = `
<div
  data-css-yto836=""
>
  <label
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-mmyfiy=""
    >
      <div
        data-css-19bj9q0=""
      >
        <div
          data-css-1o90whm=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex={-1}
      type="checkbox"
    />
  </label>
</div>
`;

exports[`Storyshots Components/Switch Example State Demo 1`] = `
<div
  data-css-yto836=""
>
  <div
    data-css-1gfhbu8=""
  >
    <label
      aria-checked={false}
      data-css-nq9iqf=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="checkbox"
      tabIndex={0}
    >
      <div
        data-css-1lu7sfl=""
      >
        <div
          data-css-19bj9q0=""
        >
          <div
            data-css-1o90whm=""
          />
        </div>
      </div>
      <input
        checked={false}
        data-css-6wu9td=""
        readOnly={true}
        tabIndex={-1}
        type="checkbox"
      />
      <span
        data-css-1oms9gl=""
      >
        blue
      </span>
    </label>
    <label
      aria-checked={false}
      data-css-nq9iqf=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="checkbox"
      tabIndex={0}
    >
      <div
        data-css-1lu7sfl=""
      >
        <div
          data-css-19bj9q0=""
        >
          <div
            data-css-1o90whm=""
          />
        </div>
      </div>
      <input
        checked={false}
        data-css-6wu9td=""
        readOnly={true}
        tabIndex={-1}
        type="checkbox"
      />
      <span
        data-css-1oms9gl=""
      >
        green
      </span>
    </label>
    <label
      aria-checked={false}
      data-css-nq9iqf=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="checkbox"
      tabIndex={0}
    >
      <div
        data-css-1lu7sfl=""
      >
        <div
          data-css-19bj9q0=""
        >
          <div
            data-css-1o90whm=""
          />
        </div>
      </div>
      <input
        checked={false}
        data-css-6wu9td=""
        readOnly={true}
        tabIndex={-1}
        type="checkbox"
      />
      <span
        data-css-1oms9gl=""
      >
        orange
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/Switch Label Alignment 1`] = `
<div
  data-css-yto836=""
>
  <div
    data-css-1gfhbu8=""
  >
    <label
      aria-checked={false}
      data-css-1u14hec=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="checkbox"
      tabIndex={0}
    >
      <div
        data-css-1lu7sfl=""
      >
        <div
          data-css-f5cui8=""
        >
          <div
            data-css-44oays=""
          />
        </div>
      </div>
      <input
        checked={false}
        data-css-6wu9td=""
        readOnly={true}
        tabIndex={-1}
        type="checkbox"
      />
      <span
        data-css-i4my9=""
      >
        small
        -
        left
      </span>
    </label>
    <label
      aria-checked={false}
      data-css-nq9iqf=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="checkbox"
      tabIndex={0}
    >
      <div
        data-css-1lu7sfl=""
      >
        <div
          data-css-f5cui8=""
        >
          <div
            data-css-44oays=""
          />
        </div>
      </div>
      <input
        checked={false}
        data-css-6wu9td=""
        readOnly={true}
        tabIndex={-1}
        type="checkbox"
      />
      <span
        data-css-y6ldsm=""
      >
        small
        -
        right
      </span>
    </label>
    <label
      aria-checked={false}
      data-css-1u14hec=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="checkbox"
      tabIndex={0}
    >
      <div
        data-css-1lu7sfl=""
      >
        <div
          data-css-19bj9q0=""
        >
          <div
            data-css-1o90whm=""
          />
        </div>
      </div>
      <input
        checked={false}
        data-css-6wu9td=""
        readOnly={true}
        tabIndex={-1}
        type="checkbox"
      />
      <span
        data-css-16fknc=""
      >
        large
        -
        left
      </span>
    </label>
    <label
      aria-checked={false}
      data-css-nq9iqf=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="checkbox"
      tabIndex={0}
    >
      <div
        data-css-1lu7sfl=""
      >
        <div
          data-css-19bj9q0=""
        >
          <div
            data-css-1o90whm=""
          />
        </div>
      </div>
      <input
        checked={false}
        data-css-6wu9td=""
        readOnly={true}
        tabIndex={-1}
        type="checkbox"
      />
      <span
        data-css-1oms9gl=""
      >
        large
        -
        right
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/Switch Sizes 1`] = `
<div
  data-css-yto836=""
>
  <div
    data-css-1gfhbu8=""
  >
    <label
      aria-checked={false}
      data-css-nq9iqf=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="checkbox"
      tabIndex={0}
    >
      <div
        data-css-1lu7sfl=""
      >
        <div
          data-css-f5cui8=""
        >
          <div
            data-css-44oays=""
          />
        </div>
      </div>
      <input
        checked={false}
        data-css-6wu9td=""
        readOnly={true}
        tabIndex={-1}
        type="checkbox"
      />
    </label>
    <label
      aria-checked={false}
      data-css-nq9iqf=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="checkbox"
      tabIndex={0}
    >
      <div
        data-css-1lu7sfl=""
      >
        <div
          data-css-19bj9q0=""
        >
          <div
            data-css-1o90whm=""
          />
        </div>
      </div>
      <input
        checked={false}
        data-css-6wu9td=""
        readOnly={true}
        tabIndex={-1}
        type="checkbox"
      />
    </label>
  </div>
</div>
`;
